--- a/Ansible/collector_building.yml
+++ b/Ansible/collector_building.yml
@@ -30,10 +30,10 @@
       state: directory
   - name: authorized_keys for metrics
     copy:
-      src: ../Local/authorized_keys
+      src: ../Local/metrics_authorized_keys
       dest: /home/metrics/.ssh/authorized_keys
       group: metrics
-      mode: '0600'
+      mode: u+rw
       owner: metrics
   - name: Put .bashrc for metrics
     become_user: metrics
@@ -41,10 +41,53 @@
     template:
       src: bashrc-for-metrics
       dest: /home/metrics/.bashrc
-  - name: Initialize Postgres
+  - name: Make user 'reading'
+    user: 
+      name: reading
+      home: /home/reading
+      shell: /bin/bash
+  - name: Make .ssh for reading
+    file:
+      path: /home/reading/.ssh
+      group: reading
+      mode: u+rwx
+      owner: reading
+      state: directory
+  - name: authorized_keys for reading
+    copy:
+      src: ../Local/reading_authorized_keys
+      dest: /home/reading/.ssh/authorized_keys
+      group: reading
+      mode: u+rw
+      owner: reading
+  - name: just-rsync.py for reading
+    copy:
+      src: just-rsync.py
+      dest: /home/reading
+      group: reading
+      mode: u+rwx
+      owner: reading
+  - name: Initialize Postgres for metrics
     become_user: postgres
     become: true
     postgresql_user:
       name: metrics
       role_attr_flags: CREATEDB,NOSUPERUSER
-  
+- name: Install things as metrics
+  hosts: c00.mtric.net  
+  remote_user: metrics
+  tasks:
+  - name: Create first database
+    postgresql_db:
+      login_user: metrics
+      name: metrics
+  - name: Create first table
+    postgresql_table:
+      login_user: metrics
+      db: metrics
+      name: first_table
+      columns:
+        - id bigserial primary key
+        - things text
+
+      
