--- a/Ansible/collector_building.yml
+++ b/Ansible/collector_building.yml
@@ -16,75 +16,61 @@
     copy:
       src: bashrc-for-root
       dest: /root/.bashrc
-  - name: Make /sftp for transfer users
+  - name: Make /sftp for transfer user
     file:
       path: /sftp
       state: directory
       mode: go-w
-  - name: Create all users transfer-xxx
-    user:
-      name: transfer-{{ item | basename }}
-      home: /sftp/transfer-{{ item | basename }}
-      shell: /bin/bash
-    with_fileglob:
-      - "../Local/Transfer-public-keys/???"
-  - name: Make  ~transfer-xxx/Output
-    file:
-      path: /sftp/transfer-{{ item | basename }}/Output
-      state: directory
-      recurse: yes
-      owner: transfer-{{ item | basename }}
-      group: transfer-{{ item | basename }}
-    with_fileglob:
-      - "../Local/Transfer-public-keys/???"
-  - name: Make  ~transfer-xxx/AlreadyProcessed
-    file:
-      path: /sftp/transfer-{{ item | basename }}/AlreadyProcessed
-      state: directory
-      recurse: yes
-      owner: transfer-{{ item | basename }}
-      group: transfer-{{ item | basename }}
-      mode: go+wx
-    with_fileglob:
-      - "../Local/Transfer-public-keys/???"
-  - name: authorized_keys for transfer-xxx
-    authorized_key:
-      user: transfer-{{ item | basename }}
-      key: '{{lookup("file", "../Local/Transfer-public-keys/{{ item | basename }}") }}'
-    with_fileglob:
-      - "../Local/Transfer-public-keys/???"
   - name: Replace sshd_config
     copy:
-      src: sshd_config-for-collector
+      src: sshd_config-shorter
       dest: /etc/ssh/sshd_config
   - name: Restart sshd after changing the config
     systemd:
       state: restarted
       name: sshd.service
       daemon_reload: yes      
+  - name: Make user 'transfer'
+    user:
+      name: transfer
+      home: /sftp/transfer
+      shell: /bin/bash
   - name: Make user 'metrics'
     user: 
       name: metrics
       home: /home/metrics
       shell: /bin/bash
-  - name: Put .bashrc for metrics
-    become_user: metrics
-    become: true
-    template:
-      src: bashrc-for-metrics
-      dest: /home/metrics/.bashrc
   - name: Initialize Postgres for metrics
     become_user: postgres
     become: true
     postgresql_user:
       name: metrics
       role_attr_flags: CREATEDB,NOSUPERUSER
+- name: Set up transfer user
+  hosts: new_vps
+  remote_user: "{{ superuser }}"
+  become_user: transfer
+  become: yes
+  tasks:
+  -name: Set up authorized_keys for transfer
+    authorized_key:
+      user: transfer
+      key: '{{lookup("file", "../Local/transfer-id_rsa.pub") }}'
+  -name: Create Output/
+    file:
+      path: /sftp/transfer/Output
+      mode: go+w
+      state: directory
 - name: Install things as metrics
   hosts: c00.mtric.net  
   remote_user: "{{ superuser }}"
   become: true
   become_user: metrics
   tasks:
+  - name: Put .bashrc for metrics
+    template:
+      src: bashrc-for-metrics
+      dest: /home/metrics/.bashrc
   - name: Create first database
     postgresql_db:
       login_user: metrics
