--- a/Ansible/collector_building.yml
+++ b/Ansible/collector_building.yml
@@ -15,7 +15,7 @@
         pkg-config, postgresql, pyflakes3, python-ply, python-psycopg2, rsync, unzip]
   - name: Put .bashrc for root
     copy:
-      src: bashrc-for-metrics-and-root
+      src: ../bashrc-for-metrics-and-root
       dest: /root/.bashrc
   - name: Make /sftp for transfer user
     file:
@@ -24,7 +24,7 @@
       mode: go-w
   - name: Replace sshd_config
     copy:
-      src: sshd_config-shorter
+      src: ../sshd_config-shorter
       dest: /etc/ssh/sshd_config
   - name: Restart sshd after changing the config
     systemd:
@@ -70,7 +70,7 @@
   tasks:
   - name: Put .bashrc for metrics
     template:
-      src: bashrc-for-metrics-and-root
+      src: ../bashrc-for-metrics-and-root
       dest: /home/metrics/.bashrc
   - name: Create first database
     postgresql_db:
@@ -96,7 +96,7 @@
       state: directory
   - name: Put local BIND tarball and expand it
     unarchive: 
-      src: bind-9.16.1.tar.xz
+      src: ../bind-9.16.1.tar.xz
       dest: /home/metrics/Source
       creates: /home/metrics/Source/bind-9.16.1
   - name: Make BIND
